<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_user">REGISTER USER</string>
    <string name="have_an_account">Have an account?</string>
    <string name="banner">paymentAPIs</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">Email Address</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>


</resources>